--- a/deployments/DockerizingSpringApplication/AirportManagementProject/pom.xml
+++ b/deployments/DockerizingSpringApplication/AirportManagementProject/pom.xml
@@ -5,24 +5,21 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.10</version>
+		<version>3.5.9</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.usermanagement</groupId>
-	<artifactId>UserManagement</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>UserManagement</name>
-	<description>UserManagement project </description>
+	<groupId>com.airport.domain</groupId>
+	<artifactId>airport-management</artifactId>
+	<version>1.0.0</version>
+	<packaging>jar</packaging>
+	<name>AirportManagement</name>
+	<description>Airport Management project</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 	<dependencies>
-<!--		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
--->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -31,7 +28,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<!--
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		-->
+		<!--Testing dependencies-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
