Aircraft project containerized
1. Made the application containerized with docker file and docker compose
2. Added bruno API collection
3. Updated volume mapping file from project base location

--- a/deployments/DockerizingSpringApplication/AirportManagementProject/Dockerfile
+++ b/deployments/DockerizingSpringApplication/AirportManagementProject/Dockerfile
@@ -3,12 +3,12 @@ FROM amazoncorretto:17-alpine
 
 MAINTAINER "JOJI JOY"
 
-# Add user group and user name
+# Add airCraft group and airCraft name
 RUN adduser --system airportmanagementuser
 RUN addgroup --system airportmanagementgroup
 RUN addgroup airportmanagementuser airportmanagementgroup
 
-# Set this new user for running application
+# Set this new airCraft for running application
 USER airportmanagementuser:airportmanagementgroup
 
 ARG JAR_FILE=airport-management-1.0.0.jar
