--- a/deployments/DockerizingSpringApplication/AirportManagementProject/src/main/resources/application.yml
+++ b/deployments/DockerizingSpringApplication/AirportManagementProject/src/main/resources/application.yml
@@ -1,1 +1,12 @@
+server:
+  port: 8080
 
+spring:
+  datasource:
+    url: ${DB_URL}
+    username: postgres
+    password: password  # should come from a secure vault
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
